ImageGen/tests/snapshots/snapshot_tests__default_preset.snap
---
source: tests/snapshot_tests.rs
expression: signature
---
width: 640
height: 480
center:
  - 0
  - 0
  - 0
top_left:
  - 0
  - 0
  - 0
top_right:
  - 0
  - 0
  - 0
bottom_left:
  - 63953
  - 63953
  - 63954
bottom_right:
  - 0
  - 0
  - 0
avg_r: 3880
avg_g: 3787
avg_b: 3449
non_black_pixels: 18731
