ImageGen/tests/snapshots/snapshot_tests__gallery_preset.snap
---
source: tests/snapshot_tests.rs
expression: signature
---
width: 640
height: 480
center:
  - 0
  - 0
  - 0
top_left:
  - 0
  - 0
  - 0
top_right:
  - 0
  - 0
  - 0
bottom_left:
  - 0
  - 0
  - 0
bottom_right:
  - 0
  - 0
  - 0
avg_r: 562
avg_g: 491
avg_b: 244
non_black_pixels: 40618
