ImageGen/tests/snapshots/snapshot_tests__histogram_levels.snap
---
source: tests/snapshot_tests.rs
expression: levels
---
black_r: "0.000000e0"
white_r: "8.004670e-1"
black_g: "0.000000e0"
white_g: "6.677388e-1"
black_b: "0.000000e0"
white_b: "6.309278e-1"
num_samples: 768000
