ImageGen/tests/snapshots/snapshot_tests__minimal_preset.snap
---
source: tests/snapshot_tests.rs
expression: signature
---
width: 640
height: 480
center:
  - 0
  - 0
  - 0
top_left:
  - 248
  - 245
  - 143
top_right:
  - 0
  - 0
  - 0
bottom_left:
  - 0
  - 0
  - 0
bottom_right:
  - 0
  - 0
  - 0
avg_r: 564
avg_g: 599
avg_b: 59
non_black_pixels: 17322
