ImageGen/tests/snapshots/snapshot_tests__special_mode.snap
---
source: tests/snapshot_tests.rs
expression: signature
---
width: 640
height: 480
center:
  - 41257
  - 49067
  - 39635
top_left:
  - 1129
  - 2837
  - 3278
top_right:
  - 32013
  - 41490
  - 33671
bottom_left:
  - 30595
  - 42047
  - 30804
bottom_right:
  - 145
  - 746
  - 874
avg_r: 1354
avg_g: 2595
avg_b: 2663
non_black_pixels: 304122
